# ironflow

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  awesome-use-cases.md  docker-compose.yml
.github/workflows/: ci.yml
benches/: pipeline_bench.rs
docs-site/: README-conversao.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json
docs-site/k8s/: deployment.yaml  ingress.yaml  service.yaml
docs-site/src/content/docs/: api-reference.md  architecture.md  deployment.md  getting-started.md  index.mdx
docs-site/src/content/docs/guides/: architecture.md  operations.md  quickstart.md
k8s/: deployment.yaml  ingress.yaml  pipeline-job.yaml  service.yaml
src/: lib.rs  main.rs
tests/: integration_cli.rs
tests/fixtures/: input.csv
