[package]
name = "agent-data-pipeline-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance Rust CLI data pipeline: ingest -> transform -> export"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "pipeline_bench"
harness = false
